--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-        "SWF_URL": "https://nathansaturnboi.github.io/GoAnimate-Assets/animation/503",
-        "STORE_URL": "https://nathansaturnboi.github.io/GoAnimate-Assets/store/3a981f5cb2739137",
-        "CLIENT_URL": "https://nathansaturnboi.github.io/GoAnimate-Assets/static/ad44370a650793d9"
+        "SWF_URL": "https://dominicjennings.github.io/animation/503",
+        "STORE_URL": "https://dominicjennings.github.io/store/50",
+        "CLIENT_URL": "https://dominicjennings.github.io/static/477"
 }
